powerdevil: Do not use magic numbers for configuration.

People affected by 307228 might need to change their configuration.

BUG: 307228